# anydsl

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  amdgpu_icmp_fold.patch  anydsl_runtime_cmake_multiconfig.patch  common.cmake  config-amdgpu.sh.template  config-drone.sh.template  config-rocm.sh.template  config.sh  config.sh.template  fetch-prebuilt-dependencies.cmake  gcc-10.patch  gcc8-lld.patch  gdbinit  llvm-4.0.1.patch  llvm_amdgpu.patch  nvptx_feature_ptx60.patch  patch_llvm50.txt  presets.cmake  purge.sh  setup.cmake  setup.sh  setup_llvm.sh  setup_travis.sh  test-stincilla.cmake
applications/: CMakeLists.txt
cmake/: common.cmake  fetch-package.cmake  half-package.cmake  llvm-package.cmake  rv-package.cmake
cmake/modules/: FindHalf.cmake  FindLLVM.cmake  FindLZ4.cmake
ctags/: .ctags
half/include/: half.hpp
layout/: DoxygenLayout.xml  doxyfile.skeleton  header.html
patches/llvm/: amdgpu_icmp_fold.patch  apply.cmake  nvptx_feature.patch  nvptx_feature_ptx60.patch  nvptx_feature_sm86.patch  type_traits.patch
patches/pal/: cmake-setup.patch
patches/rocm-device-libs/: target-triple.patch
patches/runtime/: cmake_multiconfig.patch
patches/spirv-headers/: SPV_INTEL_joint_matrix_legacy.patch
presets/: ve.cmake  vh.cmake
scripts/: download_llvm.sh  install_cmake.sh  install_ycomp.sh  post-commit-impala.hook  post-commit-thorin.hook  post-merge  pre-commit-wiki.hook  pre-push-impala.hook  pre-push-thorin.hook  pre-push.sh  rocm-device-libs-cc-patcher.py  setup-path.sh  setup_vim_projects.sh  setup_web_pages.sh  setup_wiki.sh  update.sh  update_doxygen.sh
vim/: .project.vim
vim/ftdetect/: impala.vim  thorin.vim
vim/syntax/: impala.vim  thorin.vim
zsh/: _artic
